Added second feature

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    </html><h1>Hello World!</h1>
+    <p>This is a new feature</p>  
+    <p>This is feature2</p>
 </body>
-</html><h1>Hello World!</h1>
-<p>This is a new feature</p>
